# byondapi-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  test_byond.sh
.github/workflows/: check.yml
crates/byondapi-macros/: Cargo.toml
crates/byondapi-macros/byondapi-impl/: Cargo.toml
crates/byondapi-macros/byondapi-impl/src/: lib.rs
crates/byondapi-macros/src/: lib.rs
crates/byondapi-rs/: .gitignore  Cargo.toml  README.md
crates/byondapi-rs-test/: Cargo.toml  bindings.dm
crates/byondapi-rs-test/dm_project/: .gitignore  bindings.dm  dm_project.dm  dm_project.dmb  dm_project.dme  dm_project.int  log.txt  meow.txt  test_map.dmm
crates/byondapi-rs-test/src/: lib.rs
crates/byondapi-rs-test/tests/: test.rs
crates/byondapi-rs/src/: binds.rs  byond_string.rs  error.rs  global_call.rs  lib.rs  list.rs  list_vec.rs  map.rs  pixloc.rs  prelude.rs  runtime.rs  static_global.rs  threadsync.rs  typecheck_trait.rs  value.rs
crates/byondapi-rs/src/value/: builtins.rs  constructors.rs  conversion.rs  functions.rs  list.rs  mod.rs  pointer.rs  refcounted.rs  test.rs  trait_impls.rs  types.rs
crates/byondapi-sys/: .gitignore  Cargo.toml  README.md  build.rs
crates/byondapi-sys/headers/515-1609/: byondapi.h
crates/byondapi-sys/headers/515-1610/: byondapi.h
crates/byondapi-sys/headers/515-1611/: byondapi.h
crates/byondapi-sys/headers/515-1617/: byondapi.h
crates/byondapi-sys/headers/515-1620/: byondapi.h
crates/byondapi-sys/headers/515-1621/: byondapi.h
crates/byondapi-sys/headers/516-1648/: byondapi.h
crates/byondapi-sys/src/: lib.rs  wrapper.hpp
src/: lib.rs  wrapper.hpp
tools/: setup_byond_linux.sh  setup_byond_windows.sh
