[package]
name = "byondapi-sys"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Raw bindgen bindings for byondapi"
repository = "https://github.com/spacestation13/byondapi-sys"
homepage = "https://github.com/spacestation13/byondapi-sys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = [] # Do not build the doc with any other target than the default.

[features]
default = ["515.1609"]
"515.1609" = []

[build-dependencies]
bindgen = "0.66.1"
reqwest = { version = "0.11.18", features = ["blocking"] }
tempfile = "3.6.0"
walkdir = "2.3.3"
zip = "0.6.6"
