[package]
name = "byondapi-sys"
version = "0.6.0"
authors = ["tigercat2000 <nick.pilant@gmail.com>"]
edition = "2021"
description = "Raw bindgen bindings for byondapi"
readme = "README.md"
license = "MIT"
repository = "https://github.com/spacestation13/byondapi-sys"
keywords = ["byond", "byondapi"]
exclude = [".vscode/*"]

[lib]
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
default-target = "i686-unknown-linux-gnu"
targets = [] # Do not build the doc with any other target than the default.

[features]
default = ["515-1609"]
515-1609 = []

[dependencies]
libloading = "0.8.0"

[build-dependencies]
bindgen = "0.66.1"
reqwest = { version = "0.11.18", features = ["blocking"] }
rustc_version = "0.4.0"
walkdir = "2.3.3"
zip = "0.6.6"
