[package]
name = "byondapi-test"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
byondapi = { path = "../byondapi-rs" }
tempfile = "3.14.0"
cargo_metadata = "0.19.1"
eyre = "0.6.12"
