[package]
name = "byondapi"
version = "0.5.13"
authors = ["tigercat2000 <nick.pilant@gmail.com>"]
edition = "2021"
description = "Idiomatic Rust bindings for BYONDAPI"
readme = "README.md"
license = "MIT"
repository = "https://github.com/spacestation13/byondapi-rs"
keywords = ["byond", "byondapi"]
exclude = [".vscode/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byondapi-sys = { path = "../byondapi-sys", version = "0.12.3", default-features = false }
byondapi-macros = { path = "../byondapi-macros", version = "0.2.3" }
libloading = "0.8.6"
inventory = "0.3.19"
num_enum = "0.7.3"

[features]
default = ["byond-516-1651"]
byond-515-1621 = [
    "byondapi-macros/old-crash-workaround",
    "byondapi-sys/byond-515-1621",
]
byond-516-1651 = ["byondapi-sys/byond-516-1651"]
