[package]
name = "byondapi-sys"
version = "0.10.1"
authors = ["tigercat2000 <nick.pilant@gmail.com>"]
edition = "2021"
description = "Raw bindgen bindings for byondapi"
readme = "README.md"
license = "MIT"
repository = "https://github.com/spacestation13/byondapi-rs"
keywords = ["byond", "byondapi"]
exclude = [".vscode/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
default-target = "i686-unknown-linux-gnu"
targets = []                              # Do not build the doc with any other target than the default.

[dependencies]
libloading = "0.8.1"

[build-dependencies]
bindgen = "0.68.1"
rustc_version = "0.4.0"
walkdir = "2.4.0"

[features]
default = ["byond-515-1617"]
byond-515-1617 = []
byond-515-1611 = []
byond-515-1610 = []
byond-515-1609 = []
