[package]
name = "byondapi-sys"
version = "0.11.2"
authors = ["tigercat2000 <nick.pilant@gmail.com>"]
edition = "2021"
description = "Raw bindgen bindings for byondapi"
readme = "README.md"
license = "MIT"
repository = "https://github.com/spacestation13/byondapi-rs"
keywords = ["byond", "byondapi"]
exclude = [".vscode/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
default-target = "i686-unknown-linux-gnu"
targets = []                              # Do not build the doc with any other target than the default.

[dependencies]
libloading = "0.8"

[build-dependencies]
bindgen = "0.70"
doxygen-rs = "0.4"

[features]
default = ["byond-515-1621"]
byond-515-1621 = []
